# midi2cv

./: CMakeLists.txt  Makefile  README.md  main.c
lib/: midi.c  midi.h
